# state_machine

./: CMakeLists.txt  README.md  StateMachine.cpp  StateMachine.h  main.cpp
inc/Elevator/: Elevator.h  LinkedList.h
inc/Input/: input.h
src/Elevator/: Elevator.cpp
src/input/: input.cpp
